fixed bug in mobile where the copyright would overlap icons

--- a/source/components/app/app.scss
+++ b/source/components/app/app.scss
@@ -67,7 +67,6 @@ section {
     }
 
     div {
-        display: flex;
         small {
             width: 20em;
             height: 1em;
